--- a/flex-and-position.html
+++ b/flex-and-position.html
@@ -12,8 +12,8 @@
         <div class="logo">flexbox & position</div>
 
         <a href="#">Header</a>
-        <a href="#sticky">Sticky</a>
-        <a href="#footer">Footer</a>
+        <a href="#">Sticky</a>
+        <a href="#">Footer</a>
 
         <a href="#">Login</a>
     </header>
@@ -21,6 +21,7 @@
     <main>
         <h1>Some Positioning Tricks</h1>
         <h2>A fixed Header</h2>
+        
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dolore, a perspiciatis necessitatibus aspernatur provident quibusdam, iusto quas nihil facilis ratione rerum. Neque voluptatum labore voluptate fugiat quos eius nihil debitis asperiores voluptates, iste facere doloremque commodi reiciendis quod exercitationem repellat dicta hic placeat nostrum. Eum sapiente sed eveniet nobis iusto doloribus quod quis reprehenderit, eius, amet vel error quaerat. Laboriosam, voluptatum. Atque esse neque amet molestiae quaerat aspernatur nulla laudantium saepe maiores quidem perspiciatis doloribus expedita alias iure quae, provident impedit adipisci. Debitis facere qui in sunt corporis officia tempora iusto maxime quae laborum. Pariatur sed quasi quod libero?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta dolore, a perspiciatis necessitatibus aspernatur provident quibusdam, iusto quas nihil facilis ratione rerum. Neque voluptatum labore voluptate fugiat quos eius nihil debitis asperiores voluptates, iste facere doloremque commodi reiciendis quod exercitationem repellat dicta hic placeat nostrum. Eum sapiente sed eveniet nobis iusto doloribus quod quis reprehenderit, eius, amet vel error quaerat. Laboriosam, voluptatum. Atque esse neque amet molestiae quaerat aspernatur nulla laudantium saepe maiores quidem perspiciatis doloribus expedita alias iure quae, provident impedit adipisci. Debitis facere qui in sunt corporis officia tempora iusto maxime quae laborum. Pariatur sed quasi quod libero?</p>
         
@@ -63,7 +64,7 @@
         <p>Coffee Rights &copy; 2022</p>
     </footer>
 
-    <div class="backdrop" onclick="closeModal()"></div>
+    <div class="backdrop"></div>
     <section class="modal">
         <button class="btn-close" onclick="closeModal()">x</button>
         <h2>Pro Plan!</h2>
